# crank-old

./: CMakeLists.txt  README
cmake/: Findm4.cmake  m4gen.cmake
include/blaCk/: config.h.in  hash_map.h.m4
include/crank/: compiler.h  config.h.in
m4/: capitalize.m4  hash_map.m4  types.m4
src/: config.h.in  hash_map.c.m4  primes.c  primes.h
